다이어리 보기 액티비티 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
             android:exported="false" />
         <activity android:name=".DiaryListActivity">
         </activity>
+        <activity
+            android:name=".DiaryViewActivity"
+            android:windowSoftInputMode="adjustNothing"
+            android:exported="false" />
 
     </application>
 
